apps/llama-cpp-leader/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: llama-cpp-leader
  namespace: shikanime
spec:
  serviceName: llama-cpp-leader
  replicas: 1
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  volumeClaimTemplates:
    - metadata:
        name: cache-huggingface
      spec:
        resources:
          requests:
            storage: 512Gi
        storageClassName: nishir-ephemeral
        accessModes:
          - ReadWriteOncePod
  selector:
    matchLabels:
      app.kubernetes.io/instance: llama-cpp-leader
      app.kubernetes.io/name: llama-cpp-leader
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: llama-cpp-leader
        app.kubernetes.io/name: llama-cpp-leader
    spec:
      securityContext:
        fsGroup: 65532
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: feature.node.kubernetes.io/pci-0380_1002.present
                    operator: In
                    values:
                      - "true"
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 50
              preference:
                matchExpressions:
                  - key: feature.node.kubernetes.io/network.speed.10g
                    operator: In
                    values:
                      - "true"
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/instance: llama-cpp-worker
              topologyKey: kubernetes.io/hostname
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/instance: llama-cpp
              topologyKey: kubernetes.io/hostname
      containers:
        - name: llama-cpp-leader
          image: llama-cpp
          command:
            - llama-server
          securityContext:
            privileged: true
            allowPrivilegeEscalation: true
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 120
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - name: cache-huggingface
              mountPath: /.cache/huggingface
            - name: models-preset
              mountPath: /etc/llama-cpp/preset
              readOnly: true
            - name: api-key
              mountPath: /etc/llama-cpp/api-key
              subPath: apiKey
              readOnly: true
            - name: dev-kfd
              mountPath: /dev/kfd
            - name: dev-dri
              mountPath: /dev/dri
      volumes:
        - name: models-preset
          configMap:
            name: llama-cpp-leader-models-preset
        - name: api-key
          secret:
            secretName: llama-cpp-leader-key
            items:
              - key: apiKey
                path: apiKey
        - name: dev-kfd
          hostPath:
            type: CharDevice
            path: /dev/kfd
        - name: dev-dri
          hostPath:
            type: Directory
            path: /dev/dri
