apps/llama-cpp-leader/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: llama-cpp-leader
  namespace: shikanime
spec:
  selector:
    app.kubernetes.io/instance: llama-cpp-leader
    app.kubernetes.io/name: llama-cpp-leader
  ports:
    - name: http
      appProtocol: http
      port: 8080
      protocol: TCP
      targetPort: http
