apps/llama-cpp-leader/base/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: llama-cpp-leader
spec:
  ingress: []
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: llama-cpp-leader
      app.kubernetes.io/name: llama-cpp-leader
  policyTypes:
    - Ingress
